--- a/_data/people.yml
+++ b/_data/people.yml
@@ -34,9 +34,7 @@ faculty:
   - img: "images/james_f.jpg"
     url: "https://people.bath.ac.uk/jmf68/"
     name:  "James Foster"
-    topics: "stochastic differential equations, 
-machine learning,
-rough analysis"
+    topics: "stochastic differential equations, machine learning, rough analysis"
   - img: "images/yury.jpg"
     url: "https://yury-korolev.gitlab.io/"
     name:  "Yury Korolev"
@@ -93,10 +91,6 @@ rough analysis"
     url: "https://researchportal.bath.ac.uk/en/persons/kari-heine"
     name:  "Kari Heine"
     topics: "Sequential Monte Carlo, parallelism, high-dimensional problems, MCMC, population genetics"
-  # - img: "images/hook.JPG"
-  #   url: "http://people.bath.ac.uk/jlh75/"
-  #   name:  "James Hook"
-  #   topics: "Numerical linear algebra, applications of artificial intelligence, autonomous investigators, chemical engineering"
   - img: "images/eike.JPG"
     url: "http://people.bath.ac.uk/em459/"
     name:  "Eike Mueller"
@@ -203,7 +197,7 @@ researchers:
   - name: "Tom Pennington"
     working: "R. Scheichl and K. Anaya-Izquierdo"
   - name: "Seb Scott"
-    working: Matthias Ehrhardt and Silvia Gazzola
+    working: "Matthias Ehrhardt and Silvia Gazzola"
   - name: "Paul Russell"
     working: "Özgür Şimşek"
   - name: "Paul Secular"
@@ -225,6 +219,10 @@ researchers:
   - name: "Oliver Townsend"
     working: "Silvia Gazzola and Sergey Dolgov"
 old:
+  - img: "images/hook.JPG"
+    url: "http://people.bath.ac.uk/jlh75/"
+    name:  "James Hook"
+    topics: "Numerical linear algebra, applications of artificial intelligence, autonomous investigators, chemical engineering"
   - img: "images/olga.jpg"
     url: "https://olgaisupova.github.io/"
     name:  "Olga Isupova"
