--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,27 +1,27 @@
 items:
   - date: "2025-07-20"
-    text: "[Maths4DL](https://maths4dl.ac.uk/) conference on [**Inverse Problems and Deep Learning**](https://maths4dl.ac.uk/newsevents/maths4dl-conference-on-inverse-problems-and-deep-learning)."
+    text: "[Maths4DL](https://maths4dl.ac.uk/) conference on [**Inverse Problems and Deep Learning**](https://maths4dl.ac.uk/newsevents/maths4dl-conference-on-inverse-problems-and-deep-learning)"
     critical: false
   - date: "2024-05-20"
-    text: "ICMS workshop on [**Big Data Inverse Problems**](https://www.icms.org.uk/BigData)."
+    text: "ICMS workshop on [**Big Data Inverse Problems**](https://www.icms.org.uk/BigData)"
     critical: false
   - date: "2024-06-03"
-    text: "ICMS workshop on [**New Directions for Stochastic Differential Equations and Machine Learning**](https://www.icms.org.uk/SDEsandML)."
+    text: "ICMS workshop on [**New Directions for Stochastic Differential Equations and Machine Learning**](https://www.icms.org.uk/SDEsandML)"
     critical: false
   - date: "2024-03-25"
     text: "Two-day workshop on **[Dynamics, data, and deep Learning](https://maths4dl.ac.uk/newsevents/dynamics-data-and-deep-learning-workshop-25-26-march-2024/)**"
     critical: true 
   - date: "2022-09-20"
-    text: "**[Deep Learning in Environmental Settings](https://people.bath.ac.uk/td314/envdl/envDL.html)** Two-day workshop 20-21 September 2022."
+    text: "**[Deep Learning in Environmental Settings](https://people.bath.ac.uk/td314/envdl/envDL.html)** Two-day workshop 20-21 September 2022"
     critical: true 
   - date: "2022-09-12"
-    text: "**[Statistical Learning and Differential Privacy](/events/workshop_SLDP2022/)** Two-day workshop 12-13 September 2022. "
+    text: "**[Statistical Learning and Differential Privacy](/events/workshop_SLDP2022/)** Two-day workshop 12-13 September 2022"
     critical: false
   - date: "2022-07-26"
-    text: "**[Analytical and Geometric Approaches to ML](https://bathsymposium.ac.uk/symposium/analytic-and-geometric-approaches-to-machine-learning/)** Five-day workshop 11-15 July 2022. "
+    text: "**[Analytical and Geometric Approaches to ML](https://bathsymposium.ac.uk/symposium/analytic-and-geometric-approaches-to-machine-learning/)** Five-day workshop 11-15 July 2022"
     critical: false
   - date: "2022-04-21"
-    text: "**[Maths4DL Launch](https://people.bath.ac.uk/mascjb/maths4dl.html)** To launch Maths4DL, we are organising a two-day hybrid opening workshop on 21st-22nd April. "
+    text: "**[Maths4DL Launch](https://people.bath.ac.uk/mascjb/maths4dl.html)** To launch Maths4DL, we are organising a two-day hybrid opening workshop on 21st-22nd April"
     critical: false
   - date: "2021-04-29"
     text: "On 7th May 2021 we are (virtually) hosting a workshop on different methods and applications of data-driven function estimation in machine learning, see [here](https://mathematics-and-algorithms-for-data.github.io/events/workshop2/) for more details."
@@ -30,16 +30,16 @@ items:
     text: "**SDEs and ML - What should we use where?** This series of targeted workshops, inspired by the science-forward Dagstuhl-style meetings, will be held on [Monday 7th June](/events/SDE2021) and [Monday 5th July](/events/SDE2021_2) at 14:00 - 17:00 BST. "
     critical: false
   - date: "2021-06-02"
-    text: "**[IR Tools](https://github.com/silviagazzola/IRtools)** Training Event for PhD students "
+    text: "**[IR Tools](https://github.com/silviagazzola/IRtools)** Training Event for PhD students"
     critical: false
   - date: "2021-05-06"
-    text: "**[Estimating functions from data](https://mathematics-and-algorithms-for-data.github.io/events/workshop2/)** One-day online  workshop on 11th May 2021. "
+    text: "**[Estimating functions from data](https://mathematics-and-algorithms-for-data.github.io/events/workshop2/)** One-day online  workshop on 11th May 2021"
     critical: false    
   - date: "2020-02-11"
-    text: "We are organising the LMS-Bath Symposium on the Mathematics of Machine Learning in August 2020, see [here](https://mathml2020.github.io/)."
+    text: "We are organising the LMS-Bath Symposium on the Mathematics of Machine Learning in August 2020, see [here](https://mathml2020.github.io/)"
     critical: false
   - date: "2020-03-16"
-    text: "In August 2020 we will be running a three week programme on the Mathematics of Machine Learning, see [here](__/events/mathml2020/)."
+    text: "In August 2020 we will be running a three week programme on the Mathematics of Machine Learning, see [here](__/events/mathml2020/)"
     critical: true
   - date: "2020-07-28"
     text: "In September 2020 we will host a workshop to bring together the 'imaging' and 'computational PDEs' communities, see [here](https://sites.google.com/view/imaging-pde-2020)."
