new MAD seminar

--- a/_data/seminars.yml
+++ b/_data/seminars.yml
@@ -1,4 +1,8 @@
 seminars:
+  - title: "Assessing the Existence of Mantle-Core Structure in Human Pancreatic Islets: From Image Analysis to Quantitative Techniques"
+    speaker: "Nicolas Verschueren (University of Exeter)"
+    date: 2025-02-13 12:15
+    location: "4W 1.7 Wolfson"
   - title: "Scalable Inexact Algorithms for Bilevel Learning"
     speaker: "Mohammad Sadegh Salehi (University of Bath)"
     date: 2024-12-12 12:15
